# rabbitMQSampleCpp

./: .gitmodules  CMakeLists.txt  README.md  emitter.py
amqpManager/: CMakeLists.txt
amqpManager/src/amqpManager/: Weirdo.cpp  Weirdo.hpp  amqpMNGR.cpp  amqpMNGR.hpp  pervasiveObj.cpp  pervasiveObj.hpp
executableApp/: CMakeLists.txt  main.cpp
